[JAVA-5730] added new unit tests with null and non-null lists. modified pom.xml with java version to 16